Update README to simple console JAR launch